--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bootstrap": "^5.2.3",
     "chokidar": "^3.5.3",
     "framer-motion": "^10.9.2",
-    "next": "^13.3.1",
+    "next": "12.1.6",
     "next-images": "^1.8.5",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
