--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "chokidar": "^3.5.3",
+    "core-js-pure": "^3.30.2",
     "framer-motion": "^10.9.2",
     "next": "12.1.6",
     "next-images": "^1.8.5",
@@ -33,7 +34,6 @@
     "build": "next build",
     "start": "next start -p 8000"
   },
- 
   "browserslist": {
     "production": [
       ">0.2%",
